--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Sitio web estático para TechAsesor con CMS basado en Markdown.",
   "main": "index.html",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "crop:logo": "node scripts/crop-logo.js"
   },
   "author": "Equipo TechAsesor",
   "license": "ISC",
   "dependencies": {
     "fs-extra": "^11.2.0",
     "front-matter": "^4.0.2",
+    "jimp": "^0.22.12",
     "marked": "^12.0.2"
   }
 }
